--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
   <ul>
     Recent matches:
     <% @category.recent_matches.each do |match| %>
-    <li><%= link_to "#{match.name}", [match.category, match] %> <i>(<%= match.category.name %>)</i></li>
+    <li><%= link_to "#{match.name}", [match.category, match] %> <i>(<%= match.category.name %>, <%= match.game.name %>)</i></li>
     <% end %>
   </ul>
 </p>
