--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @match.name %></h1>
+<h2><%= @match.game.name %></h2>
 
 <p>
   <%= render 'back' %> | <%= link_to 'Edit', edit_category_match_path() %>
@@ -6,6 +7,9 @@
 
 <p>
     <h3>Details:</h3>
+    <% @match.teams.each do |team| %>
+      <p><%= link_to team.name, team %></p>
+    <% end %>
     <p><%= @match.name %></p>
     <p>Winner: <%= @match.winner.name %></p>
 </p>
