--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -6,12 +6,20 @@
 </p>
 
 <p>
-    <h3>Details:</h3>
+    <!-- <h3>Details:</h3> -->
     <% @match.teams.each do |team| %>
       <p><%= link_to team.name, team %></p>
     <% end %>
     <p><%= @match.name %></p>
-    <p>Winner: <%= @match.winner.name %></p>
+    <% if @match.winner %>
+      <p>Winner: <%= @match.winner.name %></p>
+    <% end %>
+
+    <% if @match.details %>
+      <p>
+        <h3>Details</h3>
+        <%= @match.details %></p>
+    <% end %>
 </p>
 
 <p>
