--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -7,17 +7,26 @@
     <%= f.label :email %>
     <%= f.text_field :email %>
   </p>
+
+  <p>
+    <%= f.submit %>
+  </p>
+
+<% end %>
+
+<%= form_for @player do |f| %>
   <p>
     <%= f.label :password %>
     <%= f.password_field :password %>
   </p>
+
   <p>
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </p>
 
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Update password' %>
   </p>
 
 <% end %>
