--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,7 +9,11 @@
 </p>
 
 <p>
-  <%= link_to 'Sign in with Google', auth_at_provider_path(:provider => :google) %>
+  <%= link_to 'Sign in with Google', auth_at_provider_path(:provider => :google, :category => @category.id) %>
+</p>
+
+<p>
+  <%= link_to "Subscribe to #{category.name}", new_category_match_path(@category) %>
 </p>
 
 <p>
