--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
       <%= link_to "Logout", :logout, method: :post %>
     <% else %>
       <%= link_to "Register", new_player_path %> |
-      <%= link_to "Login", :login %>
+      <%= link_to "Login", :login %> |
+      <%= link_to 'Sign in with Google', auth_at_provider_path(:provider => :google) %>
     <% end %>
   </div>
   <div>
