--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,7 +13,9 @@
 </p>
 
 <p>
-  <%= link_to "Subscribe to #{@category.name}", new_category_match_path(@category) %>
+  <% if current_user and not current_user.categories.include?(@category) %>
+    <%= link_to "Subscribe to #{@category.name}", player_subscriptions_path(current_user.id, category_id: @category.id), method: :post %>
+  <% end %>
 </p>
 
 <p>
@@ -30,6 +32,15 @@
     <h3>Games:</h3>
     <% @games.each do |game| %>
       <li><%= link_to game.name, category_game_path(@category, game) %></li>
+    <% end %>
+  </ul>
+</p>
+
+<p>
+  <ul>
+    <h3>Top Players:</h3>
+    <% @category.top_players.each do |player| %>
+      <li><%= link_to player.name, player %></li>
     <% end %>
   </ul>
 </p>
