--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -8,8 +8,13 @@
 <p>
     <!-- <h3>Details:</h3> -->
     <% @match.teams.each do |team| %>
-      <p><%= link_to team.name, team %></p>
+      <% if team.players.count == 1 %>
+        <p><%= link_to team.players.first.name, team.players.first %></p>
+      <% else %>
+        <p><%= link_to team.name, team %></p>
+      <% end %>
     <% end %>
+
     <p><%= @match.name %></p>
     <% if @match.winner %>
       <p>Winner: <%= @match.winner.name %></p>
