--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,10 @@
 <body>
 
   <div id="nav">
+    <%= link_to 'Home', root_path %>
     <% if current_user %>
-      <%= link_to "Edit Profile", edit_player_path(current_user.id) %> |
-      <%= link_to "Logout", :logout, method: :post %>
+      | <%= link_to "Edit Profile", edit_player_path(current_user.id) %>
+      | <%= link_to "Logout", :logout, method: :post %>
       <% if current_user.favourite_category %>
         | <%= link_to current_user.favourite_category.name, current_user.favourite_category %>
       <% end %>
